--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -245,7 +245,7 @@
 
                 <!-- Modal body -->
                 <div class="modal-body modal-content-center">
-                    <form asp-action="PostContactNumber" asp-controller="Home" method="post" class="mb-3">
+                    <form action="/Home/PostContactNumber" method="post" class="mb-3">
                         <input type="text" id="textInput" class="form-control center-placeholder" />
                 </div>
 
